--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
 h1 {
   text-align: center;
   font-size: 3rem;
+  margin-bottom: -10px;
 }
 
 .box {
@@ -61,4 +62,9 @@ h1 {
 span {
   position: absolute;
   right: -40px;
+  cursor: pointer;
+}
+
+p {
+  margin-bottom: 2rem;
 }
