--- a/style.css
+++ b/style.css
@@ -42,14 +42,14 @@ body {
 h1 {
   text-align: center;
   font-size: 3rem;
-  margin-bottom: -10px;
+  margin-bottom: -1rem;
 }
 
 .box {
-  padding: 30px 70px;
+  padding: 3rem 7rem;
   font-size: 2.2rem;
   border: 1px solid gray;
-  border-radius: 10px;
+  border-radius: 1rem;
   width: 100%;
   box-shadow: 0.2rem 0.4rem 0.5rem rgba(0, 0, 0, 0.3);
 }
@@ -61,10 +61,14 @@ h1 {
 
 span {
   position: absolute;
-  right: -40px;
+  right: -5rem;
   cursor: pointer;
 }
 
 p {
-  margin-bottom: 2rem;
+  /* margin-bottom: 2rem; */
+}
+
+.answer {
+  display: none;
 }
