--- a/style.css
+++ b/style.css
@@ -7,72 +7,106 @@
 
 */
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Rubik:wght@400;500;600;700&display=swap');
-
-html {
-  /* default: 10px */
-  /* 10 / 16 * 100 = 62.5 */
-  font-size: 62.5%;
-}
+@import url('https://fonts.googleapis.com/css2?family=Muli:wght@400;700&family=Rubik:wght@400;500;600;700&display=swap');
 
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  font-family: 'Roboto', sans-serif;
-  overflow: hidden;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-  gap: 2.4rem;
-  max-width: 100rem;
-  padding-inline: 2em;
-  margin-inline: auto;
+  font-family: 'Muli', sans-serif;
+  background-color: #f0f0f0;
 }
 
 h1 {
+  margin: 50px 0 30px;
   text-align: center;
-  font-size: 3rem;
-  margin-bottom: -1rem;
 }
 
-.box {
-  padding: 3rem 7rem;
-  font-size: 2.2rem;
-  border: 1px solid gray;
-  border-radius: 1rem;
-  width: 100%;
-  box-shadow: 0.2rem 0.4rem 0.5rem rgba(0, 0, 0, 0.3);
+.faq-container {
+  max-width: 600px;
+  margin: 0 auto;
 }
 
-.question {
+.faq {
   position: relative;
-  display: flex;
+  background-color: transparent;
+  border: 1px solid #9fa4a8;
+  border-radius: 10px;
+  margin: 20px 0;
+  padding: 30px;
+  overflow: hidden;
+  transition: 0.3s ease;
 }
 
-span {
+.faq.active {
+  background-color: #fff;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.1);
+}
+
+.faq.active::before,
+.faq.active::after {
+  content: '\f075';
+  font-family: 'Font Awesome 5 Free';
+  color: #2ecc71;
+  font-size: 7rem;
   position: absolute;
-  right: -5rem;
-  cursor: pointer;
+  opacity: 0.2;
+  top: 20px;
+  left: 20px;
+  z-index: 0;
 }
 
-.answer {
+.faq.active::before {
+  color: #3498db;
+  top: -10px;
+  left: -30px;
+  transform: rotateY(180deg);
+}
+
+.faq-title {
+  margin: 0 35px 0 0;
+}
+
+.faq-text {
   display: none;
+  margin: 30px 0 0;
 }
 
-.active .answer {
+.faq.faq.active .faq-text {
   display: block;
 }
 
-.active p {
-  margin-bottom: 2rem;
+.faq-toggle {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  height: 30px;
+  width: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  padding: 0;
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+}
+
+.faq-toggle:focus {
+  outline: none;
+}
+
+.faq-toggle .fa-circle-xmark {
+  display: none;
+}
+
+.faq.active .faq-toggle .fa-angle-down {
+  display: none;
+}
+
+.faq.active .faq-toggle .fa-circle-xmark {
+  display: block;
 }
